v0.1.20-snapshot

v0.1.19
Feature: Can reload general domain information or reconnect if a failure occurred.

v0.1.18

Feature: Settings page allows you to save/edit/remove items from the lists.
Fix: Gracefully gives error message if no ActiveDirectory PowerShell module.
Fix: Gracefully gives error message if cannot connect to Active Directory.

v0.1.17

Fix: Removed unused dependencies.

v0.1.16

Fix: More robust logging.
Fix: Using only one powershell instance
Fix: Included Matieral-Design Icon CSS Shim

v0.1.15

Feature: Began tracking changes in a changelog.
Feature: Wrote 'changelog-uploader' which uploads a new changelog when publishing an update.
Feature: Mocked the settings page.
Fix: Updated readme.md