@@ -5,9 +5,9 @@
     <hr class="my-4" />
     <p>
       Active directory status:
-      <span id="adconnectionStatus" class="px-1">unknown</span>
+      <span id="adconnectionStatus" class="px-1"></span>
       <button class="btn btn-outline" id="refreshAdConnection">
-        <i class="mdi mdi-reload"></i> <span>Refresh</span>
+        <i class="mdi mdi-loading mdi-spin"></i> <span>Connecting..</span>
       </button>
     </p>
     <div id="connectionProgress" class="progress">
